	  case of an svn checkout without .svn subdirs (gentoo ebuild).
	  In particular, we want to use $(srcdir)/gnc-svninfo.h
	  so that a build from a dist tarball has the svn version.

	* src/bin/overrides/gnucash
	* src/bin/overrides/gnucash-valgrind
	* src/bin/overrides/Makefile.am:
	  remove unnecessary override files that are no longer useful.

2006-01-13  Neil Williams <linux@codehelp.co.uk>

	* src/bin/test/test-version : Using Derek's fix to
	resolve the test failure.

2006-01-13  Derek Atkins  <derek@ihtfp.com>

	* src/bin/overrides/gnucash-build-env.in:
	  Change core-utils to a gnc-module-dir so it loads both
	  the .scm and the .so properly.

r12337 | chris | 2006-01-12 20:25:12 -0500 (Thu, 12 Jan 2006) | 5 lines

   M /trunk/src/app-utils/Makefile.am
   M /trunk/src/app-utils/gnc-gettext-util.c
   M /trunk/src/app-utils/gnc-gettext-util.h
   M /trunk/src/app-utils/gw-app-utils-spec.scm
   D /trunk/src/app-utils/i18n.h.in
   M /trunk/src/bin/Makefile.am
   M /trunk/src/bin/gnucash-bin.c
   A /trunk/src/bin/i18n.h.in (from /trunk/src/app-utils/i18n.h.in:12334)
   M /trunk/src/scm/main.scm

   Move gnu-module init and gettext init from scm to C.
   Move i18n.h.in from src/app-utils to src/bin, where it is used.
   Remove unneeded gettext init code in src/app-utils

r12330 | chris | 2006-01-12 16:26:01 -0500 (Thu, 12 Jan 2006) | 6 lines

   M /trunk/src/backend/file/gnc-account-xml-v2.c
   M /trunk/src/backend/file/test/test-real-data.sh
   M /trunk/src/backend/file/test/test-xml-account.c

   Don't let deprecated tags overwrite data from newer tags.
   Avoid testing for match of deprecated tags.
   Warn about deprecated tags not being preserved.
   Plug another leak in test case.
   Make successful test-xml-account less verbose.

r12329 | chris | 2006-01-12 16:22:03 -0500 (Thu, 12 Jan 2006) | 3 lines

   M /trunk/src/backend/file/test/test-file-stuff.c

   Avoid creating new xml parser for each test file.
   This plugs a mem leak in the test case.
