@@ -3,8 +3,8 @@ libpcre_la_SOURCES = maketables.c get.c study.c pcre.c pcreposix.c
 EXTRA_DIST = COPYING
 
 libpcre_a_ladir = $(includedir)/libgoffice-1/goffice/cut-n-paste/pcre
-libpcre_a_la_HEADERS = pcreposix.h
-noinst_HEADERS = internal.h pcre.h
+noinst_HEADERS = pcreposix.h
+noinst_HEADERS += internal.h pcre.h
 
 AM_CPPFLAGS = \
 	$(GOFFICE_DEPS_CFLAGS) \
